// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageTitle /> Should render correctly 1`] = `
.c1 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c2 {
  margin: 2.3rem 0 0 0;
}

.c0 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

<div>
  <div
    class="c0"
  >
    <h1
      class="c1 c2"
    >
      Test
    </h1>
  </div>
  some text
</div>
`;

exports[`<PageTitle /> Should render correctly with custom className 1`] = `
.c1 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c2 {
  margin: 2.3rem 0 0 0;
}

.c0 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

<div>
  <div
    class="c0"
  >
    <h1
      class="c1 c2 test-custom-classname"
    >
      Test
    </h1>
  </div>
  some text
</div>
`;

exports[`<PageTitle /> Should render correctly with other props 1`] = `
.c2 {
  display: inline-block;
  border-radius: 0.25rem;
  font-weight: bold;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  color: darkorchid;
  fill: darkorchid;
}

.c2:focus-within,
.c2:focus {
  position: relative;
  outline: none !important;
}

.c2:focus-within::after,
.c2:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c2:hover {
  color: #44aeff;
  fill: #44aeff;
}

.c4 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c3 {
  margin: 0;
}

.c5 {
  margin: 2.3rem 0 0 0;
  margin-top: 1.5rem;
}

.c1 {
  margin: 1.5rem 0 0 0;
}

.c0 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

@media (prefers-color-scheme:dark) {
  .c2:focus-within::after,
  .c2:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c2 {
    color: orchid;
    fill: orchid;
  }

  .c2:hover {
    color: #44aeff;
    fill: #44aeff;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <a
        class="c2"
        href="/test"
      >
        <span
          class="c3"
        >
          ⇠ test
        </span>
      </a>
    </div>
  </div>
  <div
    class="c0"
  >
    <h1
      class="c4 c5"
    >
      Test
    </h1>
  </div>
  some text
</div>
`;
